Blog Author Details

--- a/sections/cl-main-article.liquid
+++ b/sections/cl-main-article.liquid
@@ -46,6 +46,7 @@
           class="page-width page-width--narrow{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
           {{ block.shopify_attributes }}
         >
+          
           <span class=" twcss-pb-8 twcss-inline-block twcss-text-[#666]">
             {%- if block.settings.blog_show_date -%}
               <span class="twcss-mr-1 twcss-normal-case twcss-text-2xl ]">
@@ -56,9 +57,24 @@
               <span class="twcss-normal-case">by {{ article.metafields.blog_post.author.value.name }}</span>
             {%- endif %}
           </span>
+          
           <h1 class="h1" >
             {{ article.title | escape }}
           </h1>
+          {% comment %}
+          <span class="twcss-text-lg twcss-italic">Published on {{ article.published_at |  date: "%d %B  %Y" }}</span>
+            <div class="twcss-flex twcss-gap-4 twcss-max-w-[320px] twcss-mb-6 twcss-mt-6 twcss-text-[#666] twcss-items-center  twcss-pr-2">
+              <div>
+                {{ article.metafields.blog_post.author.value.image | image_url: width: 80 | image_tag }}
+              </div>
+              <div class="twcss-col-span-2">
+                <span class="twcss-text-lg twcss-font-bold">{{ article.metafields.blog_post.author.value.name }}</span><br>
+                <span class="twcss-text-base">{{ article.metafields.blog_post.author.value.job_title }}</span><br>
+                <span class="twcss-text-base">{{ article.metafields.blog_post.author.value.company }}</span><br>
+                <span class="twcss-text-base twcss-italic twcss-underline"><a href="{{ article.metafields.blog_post.author.value.profile_page }}" title="Learn more about {{ article.metafields.blog_post.author.value.name }}">Learn more about the author</a></span>
+              </div>
+            </div>
+            {% endcomment %}
         </header>
 
       {%- when 'content' -%}
