--- a/assets/app.css
+++ b/assets/app.css
@@ -1569,278 +1569,325 @@ ol {
   --tw-contain-style: ;
 }
 
+.twcss-col-span-2 {
+  grid-column: span 2 / span 2 !important;
+}
+
 .twcss-m-auto {
-  margin: auto;
+  margin: auto !important;
 }
 
 .twcss-mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
+  margin-left: 0.25rem !important;
+  margin-right: 0.25rem !important;
 }
 
 .twcss-mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  margin-left: 0.5rem !important;
+  margin-right: 0.5rem !important;
 }
 
 .twcss-my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
 }
 
 .twcss-mb-4 {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
+}
+
+.twcss-mb-6 {
+  margin-bottom: 1.5rem !important;
 }
 
 .twcss-mb-8 {
-  margin-bottom: 2rem;
+  margin-bottom: 2rem !important;
 }
 
 .twcss-ml-8 {
-  margin-left: 2rem;
+  margin-left: 2rem !important;
 }
 
 .twcss-mr-1 {
-  margin-right: 0.25rem;
+  margin-right: 0.25rem !important;
 }
 
 .twcss-mt-0 {
-  margin-top: 0px;
+  margin-top: 0px !important;
+}
+
+.twcss-mt-6 {
+  margin-top: 1.5rem !important;
 }
 
 .twcss-mt-8 {
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 }
 
 .twcss-inline-block {
-  display: inline-block;
+  display: inline-block !important;
 }
 
 .twcss-flex {
-  display: flex;
+  display: flex !important;
 }
 
 .twcss-grid {
-  display: grid;
+  display: grid !important;
 }
 
 .twcss-hidden {
-  display: none;
+  display: none !important;
 }
 
 .twcss-w-full {
-  width: 100%;
+  width: 100% !important;
 }
 
 .twcss-max-w-\[1440px\] {
-  max-width: 1440px;
+  max-width: 1440px !important;
+}
+
+.twcss-max-w-\[320px\] {
+  max-width: 320px !important;
 }
 
 .twcss-flex-1 {
-  flex: 1 1 0%;
+  flex: 1 1 0% !important;
 }
 
 .twcss-list-none {
-  list-style-type: none;
+  list-style-type: none !important;
 }
 
 .twcss-grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
 }
 
 .twcss-items-start {
-  align-items: flex-start;
+  align-items: flex-start !important;
 }
 
 .twcss-items-end {
-  align-items: flex-end;
+  align-items: flex-end !important;
+}
+
+.twcss-items-center {
+  align-items: center !important;
 }
 
 .twcss-justify-end {
-  justify-content: flex-end;
+  justify-content: flex-end !important;
 }
 
 .twcss-justify-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .twcss-justify-between {
-  justify-content: space-between;
+  justify-content: space-between !important;
+}
+
+.twcss-gap-4 {
+  gap: 1rem !important;
 }
 
 .twcss-gap-8 {
-  gap: 2rem;
+  gap: 2rem !important;
 }
 
 .twcss-overflow-x-auto {
-  overflow-x: auto;
+  overflow-x: auto !important;
 }
 
 .twcss-whitespace-nowrap {
-  white-space: nowrap;
+  white-space: nowrap !important;
 }
 
 .twcss-rounded-xl {
-  border-radius: 0.75rem;
+  border-radius: 0.75rem !important;
 }
 
 .twcss-border-r {
-  border-right-width: 1px;
+  border-right-width: 1px !important;
 }
 
 .twcss-border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
 }
 
 .twcss-bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
 }
 
 .twcss-bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity)) !important;
 }
 
 .twcss-p-0 {
-  padding: 0px;
+  padding: 0px !important;
 }
 
 .twcss-px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 5rem !important;
+  padding-right: 5rem !important;
 }
 
 .twcss-py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
 }
 
 .twcss-py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
 }
 
 .twcss-py-\[28px\] {
-  padding-top: 28px;
-  padding-bottom: 28px;
+  padding-top: 28px !important;
+  padding-bottom: 28px !important;
 }
 
 .twcss-pb-4 {
-  padding-bottom: 1rem;
+  padding-bottom: 1rem !important;
 }
 
 .twcss-pb-8 {
-  padding-bottom: 2rem;
+  padding-bottom: 2rem !important;
+}
+
+.twcss-pr-2 {
+  padding-right: 0.5rem !important;
 }
 
 .twcss-pr-3 {
-  padding-right: 0.75rem;
+  padding-right: 0.75rem !important;
 }
 
 .twcss-pt-8 {
-  padding-top: 2rem;
+  padding-top: 2rem !important;
 }
 
 .twcss-text-center {
-  text-align: center;
+  text-align: center !important;
 }
 
 .twcss-text-right {
-  text-align: right;
+  text-align: right !important;
 }
 
 .twcss-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.5rem !important;
+  line-height: 2rem !important;
+}
+
+.twcss-text-base {
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
+}
+
+.twcss-text-lg {
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
 }
 
 .twcss-text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
 }
 
 .twcss-font-bold {
-  font-weight: 700;
+  font-weight: 700 !important;
 }
 
 .twcss-normal-case {
-  text-transform: none;
+  text-transform: none !important;
+}
+
+.twcss-italic {
+  font-style: italic !important;
 }
 
 .twcss-leading-3 {
-  line-height: 0.75rem;
+  line-height: 0.75rem !important;
 }
 
 .twcss-text-\[\#666\] {
-  --tw-text-opacity: 1;
-  color: rgb(102 102 102 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(102 102 102 / var(--tw-text-opacity)) !important;
 }
 
 .twcss-text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+}
+
+.twcss-underline {
+  -webkit-text-decoration-line: underline !important;
+  text-decoration-line: underline !important;
 }
 
 .twcss-antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale !important;
 }
 
 .before\:twcss-shadow-none::before {
-  content: var(--tw-content);
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
+  content: var(--tw-content) !important;
+  --tw-shadow: 0 0 #0000 !important;
+  --tw-shadow-colored: 0 0 #0000 !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
 .after\:twcss-shadow-none::after {
-  content: var(--tw-content);
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
+  content: var(--tw-content) !important;
+  --tw-shadow: 0 0 #0000 !important;
+  --tw-shadow-colored: 0 0 #0000 !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
 .hover\:twcss-opacity-75:hover {
-  opacity: 0.75;
+  opacity: 0.75 !important;
 }
 
 @media (min-width: 750px) {
   .md\:twcss-mx-2 {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    margin-left: 0.5rem !important;
+    margin-right: 0.5rem !important;
   }
 
   .md\:twcss-block {
-    display: block;
+    display: block !important;
   }
 
   .md\:twcss-hidden {
-    display: none;
+    display: none !important;
   }
 
   .md\:twcss-min-h-\[46\.8px\] {
-    min-height: 46.8px;
+    min-height: 46.8px !important;
   }
 
   .md\:twcss-auto-rows-fr {
-    grid-auto-rows: minmax(0, 1fr);
+    grid-auto-rows: minmax(0, 1fr) !important;
   }
 
   .md\:twcss-grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
   }
 
   .md\:twcss-pb-1 {
-    padding-bottom: 0.25rem;
+    padding-bottom: 0.25rem !important;
   }
 }
 
 @media (min-width: 990px) {
   .lg\:twcss-mb-\[1px\] {
-    margin-bottom: 1px;
+    margin-bottom: 1px !important;
   }
 }
